# src/routes/api/userRoutes.js
@@ -1,7 +1,11 @@
 import express from "express";
-import userValidation from "../../validations/userValidation";
+import {
+  userValidation,
+  resetPasswordValidation,
+} from "../../validations/userValidation";
 import userController from "../../controllers/userController";
 import { protect, restrictTo } from "../../middlewares/protectRoute";
+import { checkExistUser, compareOtp } from "../../middlewares/user.middleware";
 const userRouter = express.Router();
 
 userRouter.post("/register", userValidation, userController.register);
@@ -13,7 +17,15 @@ userRouter.patch(
   userController.userChangePassword
 );
 userRouter.post("/forgot-password", userController.userForgotPassword);
+userRouter.put("/forgot-password", userController.mobileUserForgotPassword);
 userRouter.patch("/reset-password/:token", userController.userResetPassword);
+userRouter.put(
+  "/reset-password",
+  resetPasswordValidation,
+  checkExistUser,
+  compareOtp,
+  userController.mobileUserResetPassword
+);
 userRouter.patch("/update-profile", protect, userController.userUpdateProfile);
 userRouter.get(
   "/",
